<resources>
    <string name="app_name">Easy Attendance</string>
    <string name="easy">EASY</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="slogan">Taking Attendance is now easy with\n<b>Easy Attendance</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alreadyaccount">Already have \nan account?</string>
    <string name="newuser">New User?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="AlreadyHaveanAccount">Already Have an Account?</string>
    <string name="loginHere"><u>Login Here</u></string>
    <string name="Welcometoeasyattendance">Welcome to\n<b>Easy Attendance</b></string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_addCC">Add Class Counsellor</string>
    <string name="menu_addStudent">Add Student</string>
    <string name="menu_takeattendance">Take Attendance</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>