<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addcc"
            android:icon="@drawable/ic_add_counsellor"
            android:title="@string/menu_addCC" />
        <item
            android:id="@+id/addstudent"
            android:icon="@drawable/ic_add_student"
            android:title="@string/menu_addStudent" />
        <item
            android:id="@+id/takeattendance"
            android:icon="@drawable/ic_take_attendance"
            android:title="@string/menu_takeattendance" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>