<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreenbackground"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginStart="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyaccount"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_24ssp"
        android:fontFamily="@font/segoe_ui"
        android:layout_marginTop="@dimen/_110sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewPerson"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/segoe_ui"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_10sdp"
        android:backgroundTint="#FFFFFF"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPerson" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/segoe_ui"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_10sdp"
        android:backgroundTint="#FFFFFF"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="Login"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:background="@drawable/loginbuttonbackground"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"/>

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/newuser"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toEndOf="@id/textViewNewUser"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <ProgressBar
        android:id="@+id/progressBarLoginScreen"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>